--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     text-align: center;
     justify-content: center;
     margin: auto;
-    height: 50vh;
+    height: 100%;
     width: 100%;
     box-shadow: 2px 3px 3px 2px rgba(128, 128, 128, 0.523);
     padding: 10px;
