--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ footer {
 
 .about-section {
     position: relative;
+    padding: 10px;
     width: 100%;
     background: #fff;
     padding: 40px 0;
@@ -99,8 +100,14 @@ footer {
     margin-top: 170px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     border-radius: 30px;
-    border-left: 50px solid #3c89ed;
-    border-right: 50px solid #3c89ed;
+    border-left: 30px solid #3c89ed;
+    border-right: 30px solid #3c89ed;
+}
+
+img {
+    text-align: center;
+    margin: auto;
+    justify-content: center;
 }
 
 .inner-width {
