--- a/style.css
+++ b/style.css
@@ -225,6 +225,11 @@ img {
 
 /* End About us Page--- */
 
+#inputMessage {
+    height: 100px;
+    padding: 5px;
+}
+
 @media (min-width: 900px) and (max-width: 1024px) {
     body {
         font-size: 16px;
