Adjust top Space

--- a/style.css
+++ b/style.css
@@ -94,10 +94,10 @@ footer {
     padding: 10px;
     width: 100%;
     background: #fff;
-    padding: 40px 0;
+    padding: 20px 0;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 170px;
+    margin-top: 5%;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     border-radius: 30px;
     border-left: 30px solid #3c89ed;
