--- a/style.css
+++ b/style.css
@@ -208,6 +208,11 @@ img {
     font-size: 12px;
 }
 
+.article-container {
+    display: flex;
+    border: 1 px solid grey;
+}
+
 @media screen and (max-width:700px) {
     .about-section-col {
         flex: 100%;
